<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center">

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/frame"
        android:layout_height="@dimen/poster_height_detail">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/poster_height_detail"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_film"
            android:contentDescription="@string/app_name"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingBottom="@dimen/small_padding"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/small_padding"
            android:background="@color/colorWhiteTranslucent">

            <TextView
                android:id="@+id/imdb_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                tools:text="IMDB Id"
                style="@style/TextAppearance.AppCompat.Body1" />

            <ImageView
                android:id="@+id/movie_icon"
                android:layout_width="@dimen/small_image_dimen"
                android:layout_height="@dimen/small_image_dimen"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_film"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/imdb_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/year"
                style="@style/TextAppearance.AppCompat.Body1" />

        </RelativeLayout>

    </FrameLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:id="@+id/body"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/extra_margin">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/movie_title"
                    style="@style/TextAppearance.AppCompat.Menu"
                    android:textColor="@color/colorTextPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/small_margin"
                android:paddingBottom="@dimen/small_padding"
                android:gravity="center">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/status_tag"
                    android:text="@string/release_status"
                    style="@style/TextAppearance.AppCompat.Body2" />
                <TextView
                    android:id="@+id/status"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    style="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/small_margin"
                android:paddingBottom="@dimen/small_padding"
                android:gravity="center">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/genre_tag"
                    android:text="@string/genre"
                    style="@style/TextAppearance.AppCompat.Body2" />
                <TextView
                    android:id="@+id/genre"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    style="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/small_margin"
                android:paddingBottom="@dimen/small_padding"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description_tag"
                    android:text="@string/description"
                    style="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <RatingBar
                android:id="@+id/rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:numStars="5"
                android:rating="0" />



        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>